[package]
name = "leadforge"
version = "0.1.0"
edition = "2024"

authors = ["Iago Bozza <iago@iagobozza.com>"]
description = "Async CLI tool for fetching and filtering Hacker News job postings with concurrent HTTP requests."
readme = "README.md"

license = "MIT OR Apache-2.0"
repository = "https://github.com/writeonlycode/leadforge"
homepage = "https://github.com/writeonlycode/leadforge"
documentation = "https://docs.rs/leadgen"

keywords = ["cli", "async", "scraper", "hacker-news", "lead-generation"]
categories = ["command-line-utilities", "web-programming::http-client"]

[[bin]]
name = "leadforge"
path = "src/main.rs"

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT.md",
    "LICENSE-APACHE.md"
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
